# hdf5serie

hdf5serie/: CMakeLists.txt  hdf5serie.pc.in
hdf5serie/hdf5serie/: CMakeLists.txt  interface.cc  toh5type.cc  toh5type.h
